<resources>
    <string name="app_name">Orbit Wars</string>
    <string name="hello_world">Hello world!</string>
    <string name="placeholder">PH</string>
    <string name="newGameMenu">New Game</string>
    <string name="continueGameMenu">Continue Game</string>
    <string name="optionsMenu">Options</string>
    <string name="instructions_menu">Instructions</string>
    <string name="no_save_game">No game has been saved yet.</string>
    <string name="overwrite">Overwrite saved game?</string>
    <string name="overwrite_desc">You currently have a saved game. Starting a new game will overwrite it.\n\n
        Still proceed?</string>
    <string name="y">Yes</string>
    <string name="n">No</string>
    <string name="title_activity_options">Options</string>
    <string name="territory_size">Territory Size</string>
    <string name="demo_territory">ORB\n56/23/10</string>
    <string name="territory_size_desc">Depending on your screen size, you may need to adjust the size of territories so that you can see both its initials and the number of units it has. Use the territory Button below to help you judge.</string>
    <string-array name="territory_sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="save_options">Save Options</string>
    <string name="title_activity_new_game">New Game</string>
    <string name="select_level_pack">Level Pack</string>
    <string-array name="level_packs">
        <item>Story Levels</item>
        <item>Bonus Campaign</item>
        <item>Challenges</item>
    </string-array>
    <string name="select_level">Level Select</string>
    <string name="start_level">START</string>
    <string name="title_activity_customisation">Game Customisation</string>
    <string-array name="difficulty_levels">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string-array name="difficulty_levels_extra">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Impossible</item>
    </string-array>
    <string name="choose_diff">Difficulty</string>
    <string name="choose_dice">Dice-Like?</string>
    <string name="choose_capital">Capital Cities?</string>
    <string name="choose_upgrades">Upgrades Enabled?</string>
    <string name="choose_armies">Multiple Army Types?</string>
    <string name="choose_ai">AI Personalities?</string>
    <string name="choose_fow">Fog of War?</string>
    <string name="choose_turns">Turn Limit?</string>
    <string name="choose_regions">Region bonuses?</string>
    <string name="choose_hardcore">Hardcore?</string>
    <string name="title_activity_map">MAP</string>
    <string name="end_turn">End Turn</string>
    <string name="title_activity_territory">Territory</string>
    <string name="reject">You do not own this territory. Conquer this territory to issue orders here.</string>
    <string name="conquered_territory">You have just conquered this territory. You can\'t issue orders from here until your next turn.</string>
    <string name="out_of_turns">You are out of turns, press the End Turn button.</string>
    <string name="log_menu">LOG</string>
    <string name="log_blocked">Your current settings have disabled the log. No cheating!</string>
    <string name="close_log">Close Log</string>
    <string name="global_research">Research</string>
    <string name="regions_display">Regions</string>
    <string name="regions_desc">Hold this territory plus all the others in its region to earn bonus resources.\nThe territories in this territory\'s region are as below:\n</string>
    <string name="close_regions">Close</string>
    <string name="unit_head">Add Units</string>
    <string name="unit1_name">Army Unit</string>
    <string name="unit1_desc">A basic Army Unit - the backbone of your power. Cost: 10</string>
    <string name="add_num">Add how many?</string>
    <string name="add_units">Add Units</string>
    <string name="attack_head">Attacking and Movement</string>
    <string name="attack_num">Attack with how many units?</string>
    <string name="attack_desc">Attack this neighbouring territory.</string>
    <string name="attack">Attack!</string>
    <string name="move_num">Move how many units?</string>
    <string name="move_desc">Move units to this territory.</string>
    <string name="move">Move</string>
    <string name="cancel">Cancel</string>
    <string name="win">Victory!</string>
    <string name="win_text">Congratulations! Nice going!</string>
    <string name="lose">Defeat!</string>
    <string name="lose_text">Painful fiery death. :(</string>
    <string name="exit_win">Yay!</string>
    <string name="exit_lose">Dang!</string>
    <string name="exit_map">Back to Map</string>
    <string-array name="instruction_titles">
        <item>Welcome!</item>
        <item>The Basics</item>
        <item>Customisation</item>
        <item>Advanced Topics: Objectives</item>
        <item>Advanced Topics: The Log</item>
    </string-array>
    <string-array name="instruction_messages">
        <item>Hello and welcome to Orbit Wars! This instructions page will contain all the info you will need to learn how to play the game.\n\n
            Orbit Wars is a Risk-like turn-based 4X game, where you control a faction and have to complete certain objectives to acheive victory. If you have played Risk before, gameplay should come naturally to you.\n\n
            Read on for more detailed information. Or simply learn as you play!</item>
        <item>The most basic objective in Orbit Wars is to eliminate all your opponents, represented by other factions in different colours on the map. Your faction is blue on the map.\n\n
            To do that, you have to buy armies with your resources and conquer all their territories. The territories you hold at the start of each turn will grant you resources automatically, so defend them if you want to keep your income going.\n\n
            Clicking on any of your territories on the map will bring up another menu, where you can perform various actions with regard to that territory. This can range from adding armies to attacking neighbouring territories.\n\n
            Once you are done with your turn, press the end turn button. The AI player(s) will then take their turns and then play passes back to you. (If you are still alive at the end of their wrath.)</item>
        <item>An Orbit Wars game is highly customisable, allowing you to choose which mechanics you want active and which you don\'t. This is done via the Game Customisation screen shown after selecting a level.\n\n
            A detailed description of each modifier can be found below:\n\n
            Difficulty: Determines the general difficulty of the AI players. Play higher difficulties to earn better medals for the level.\n\n
            Dice-Like: As with Risk, you can choose to have the outcomes of battles be determined by dice-rolls, adding a factor of luck into a battle. Battles are one-for-one by default.\n\n
            Capital Cities: One of your starting territories will be your capital. Lose it, and you lose the game. Same goes for your opponents. Capitals can be identified by asterisks on both sides of their name on the map.\n\n
            Upgrades: Enabling this will allow you to spend resources to upgrade your territories or armies.\n\n
            Multiple Army Types: Instead of just a single army unit type, why not have three? The 3 types have different stats and have differing effectiveness against each other. Just like a rock-paper-scissors game.\n\n
            Fog Of War: To make things super realistic, where you can\'t see what\'s happening beyond your borders, turn this on.\n\n
            Hardcore Mode: Your game is not saved in this mode. So no going back once you have left. Can you handle it?</item>
		<item>Some levels do not require you to eliminate all your enemies, so pay attention to your objective above the map and work towards achieving it.\n\n
		    Capture Objective: You are given a target number of territories to conquer. Do that an you win!\n\n
		    Survival Objective: You opponents are much stronger than you. All you have to do is survive until a number of turns have passed.\n\n
		    Speed Objective: You have a great advantage over your opponents, but very little time to eliminate them. Kill all your opponents within the set number of turns to win.</item>
		<item>As your opponents move under the cover of darkness, it can be hard to figure out just how they achieved what they did during their turns. If you are not playing with fog-or-war on, your scouts can give you a briefing of what happened on previous turns.\n\n
		    Just click the log button on the action bar above the map to see what your opponents have been up to.</item>
    </string-array>
    <string name="title_activity_instructions">Instructions</string>
    <string name="prev_inst">Prev.</string>
    <string name="next_inst">Next</string>
    <string name="first_page">This is the first page.</string>
    <string name="last_page">This is the last page.</string>
    <string name="title_activity_upgrades">Upgrades</string>
    <string name="upgrades_title">Global Upgrades</string>
    <string name="upgrades_desc">Here you can spend resources on upgrades to boost your chances of victory.</string>
    <string name="res_upgrade">Resources</string>
    <string name="res_upgrade_desc">Upgrade your resource gathering, increasing your overall gathering rate by 5% per level.</string>
    <string name="atk_upgrade">Weapons</string>
    <string name="atk_upgrade_desc">Upgrade the weapons your armies use slightly. Giving them a 2% chance per level to kill 2 enemy units instead of one.</string>
    <string name="def_upgrade">Defences</string>
    <string name="def_upgrade_desc">Improve your defences slightly, giving your armies a 3% chance per level to survive an attack.</string>
	<string name="upgrades_off">Turn on Upgrades to use this feature.</string>
	<string name="upgrade_reject">You cannot afford this upgrade.</string>
	<string name="totd">Quick Tip</string>
</resources>