<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sg.com.yahoo.ryanlouck.orbital2015.CustomisationActivity" >

    <TextView
        android:id="@+id/diffText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customisationTitle"
        android:text="@string/choose_diff"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/diffSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/diffText"
        android:layout_below="@+id/diffText" />

    <CheckBox
        android:id="@+id/diceCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/diffSpinner"
        android:layout_below="@+id/diffSpinner"
        android:layout_marginTop="15dp"
        android:text="@string/choose_dice"
        android:onClick="checkBoxListener" />

    <TextView
        android:id="@+id/customisationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/start_level" />

    <CheckBox
        android:id="@+id/captialCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/diceCheckbox"
        android:text="@string/choose_capital" />

    <CheckBox
        android:id="@+id/upgradesCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/captialCheckBox"
        android:text="@string/choose_upgrades" />

    <CheckBox
        android:id="@+id/armiesCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/upgradesCheckBox"
        android:text="@string/choose_armies" />

    <CheckBox
        android:id="@+id/aiCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/armiesCheckBox"
        android:text="@string/choose_ai" />

    <CheckBox
        android:id="@+id/conqueredCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/aiCheckBox"
        android:text="@string/choose_conq" />

    <CheckBox
        android:id="@+id/hardcoreCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/conqueredCheckBox"
        android:text="@string/choose_hardcore" />

</RelativeLayout>
