<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sg.com.yahoo.ryanlouck.orbital2015.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/newGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/newGameMenu" />

        <Button
            android:id="@+id/continueGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continueGameMenu" />

        <Button
            android:id="@+id/optionsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/optionsMenu" />

        <Button
            android:id="@+id/instructionsButon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions_menu" />

    </LinearLayout>
   
</RelativeLayout>
