<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sg.com.yahoo.ryanlouck.orbital2015.OptionsActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

       <LinearLayout
            android:id="@+id/optionsMaster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/territoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/territory_size"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/territoryDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/territory_size_desc"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/territorySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/territoryDemo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_territory" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/save_options" />

</RelativeLayout>
